Add ETProvider for OpenMeteo
